# WISEAgent

./: Application.mk  CAgent.sln  CAgentV12.sln  Makefile-org  Makefile.am  Makefile.common  README.md  UpgradeLog.htm  build-fsl-arm-all  common_config.mk  common_version.mk  configure.ac  fsl-arm-env  risc-env
AndroidLib/curl-pre/: Android.mk
AndroidLib/iconv-pre/: Android.mk
Application/AgentEncrypt/: AgentEncrypt.c  AgentEncrypt.vcproj  Makefile  Makefile.am  ReadMe.txt
Application/CAgent/: @mote_list.ini  AdvJSON.ini  Android.mk  CAgent.rc  CAgent.vcproj  Makefile  Makefile.am  SNModuleConfig.ini  cagent.c  cagent.h  cagentlog.h  resource.h
Application/CAgent/wsn/: @interface.ini  demo1.ini  demo2.ini  demo3.ini  demo4.ini  demo5.ini  demo6.ini  mote1.ini  mote3.ini
Application/ScreenshotHelperL/: Makefile  Makefile.am  ScreenshotHelperL.c  ScreenshotL.c  ScreenshotL.h
Application/WatchdogL/: Global.c  Global.h  Makefile  Makefile.am  SAWatchdog.c  SAWatchdog.h  WatchdogCommData.h  WatchdogL.c  WatchdogL.h  WatchdogL.vcproj
Include/: susiaccess_def.h  susiaccess_handler_api.h  susiaccess_handler_ex_api.h  susiaccess_handler_mgmt.h  svnversion.h
Library3rdParty/x11vnc-0.9.3/: Makefile.am  Makefile.in  configure  configure.ac  rfbconfig.h.in
Library3rdParty/x11vnc-0.9.3/classes/: Makefile.in
Library3rdParty/x11vnc-0.9.3/classes/ssl/: Makefile.am  Makefile.in
Library3rdParty/x11vnc-0.9.3/libvncclient/: Makefile.am  Makefile.in
Library3rdParty/x11vnc-0.9.3/libvncserver/: Makefile.am  Makefile.in
Library3rdParty/x11vnc-0.9.3/rfb/: rfbconfig.h  rfbint.h
Library3rdParty/x11vnc-0.9.3/x11vnc/: Makefile.am  Makefile.in
Library3rdParty/x11vnc-0.9.3/x11vnc/misc/: Makefile.in
Modules/HDDHandler/: HDDHandler.c  HDDHandler.h  HDDHandler.vcproj  HDDHandler.vcxproj  HDDHandler.vcxproj.filters  HDDLog.h  Makefile  Makefile.am  Parser.c  Parser.h  ReadMe.txt  ThresholdHelper.c  ThresholdHelper.h  export.def  resource.h
Modules/IoTGWHandler/: AdvAPIMuxServer.c  ArrayLib.c  ArrayLib.h  BaseLib.c  BaseLib.h  BasicFun_Tool.c  BasicFun_Tool.h  BasicSocketFunc.c  BasicSocketFunc.h  HashTable.c  HashTable.h  IoTGWFunction.c  IoTGWFunction.h  IoTGWHandler.c  IoTGWHandler.h  IoTGWHandler.vcproj  LoadSNManagerAPI.c  Makefile  Makefile.am  SensorGWLog.h  SnGwParser.c  SnGwParser.h  SnMJSONParser.c  SnMJSONParser.h  export.def
Modules/IoTGWHandler/inc/: SensorNetwork_API.h  SensorNetwork_BaseDef.h  SensorNetwork_Manager_API.h
Modules/IoTGWHandler/inc/AdvApiMux/: AdvAPIMuxBase.h  AdvAPIMuxServer.h
Modules/MonitoringHandler/: Makefile  Makefile.am  MonitoringHandler.c  MonitoringHandler.h  MonitoringHandler.rc  MonitoringHandler.vcproj  MonitoringHandler.vcxproj  MonitoringHandler.vcxproj.filters  export.def  monitorlog.h  parser.c  parser.h  thresholdhelper.c  thresholdhelper.h
Modules/NetMonitorHandler/: Makefile  Makefile.am  NetMonitorHandler.c  NetMonitorHandler.h  NetMonitorHandler.vcproj  NetMonitorHandler.vcxproj  NetMonitorHandler.vcxproj.filters  NetMonitorLog.h  Parser.c  Parser.h  export.def
Modules/PowerOnOffHandler/: Makefile  Makefile.am  Parser.c  Parser.h  PowerOnOffHandler.c  PowerOnOffHandler.h  PowerOnOffHandler.vcproj  PowerOnOffHandler.vcxproj  PowerOnOffHandler.vcxproj.filters  PowerOnOffLog.h  amtconfig.c  amtconfig.h  export.def
Modules/ProcessMonitorHandler/: Makefile  Makefile.am  Parser.c  Parser.h  ProcessMonitorHandler.c  ProcessMonitorHandler.h  ProcessMonitorHandler.vcproj  ProcessMonitorHandler.vcxproj  ProcessMonitorHandler.vcxproj.filters  ProcessMonitorLog.h  export.def  process_common.h  process_config.c  process_config.h  process_threshold.c  process_threshold.h
Modules/ProtectHandler/: Makefile  Makefile.am  McAfeeAddUpdater.bat  ProtectHandler.c  ProtectHandler.h  ProtectHandler.vcproj  ProtectHandler.vcxproj  ProtectHandler.vcxproj.filters  ProtectHandlerLog.h  activate_prtt.c  activate_prtt.h  capability_prtt.c  capability_prtt.h  export.def  install_update_prtt.c  install_update_prtt.h  parser_prtt.c  parser_prtt.h  protect_prtt.c  protect_prtt.h  public_prtt.c  public_prtt.h  status_prtt.c  status_prtt.h  unprotect_prtt.c  unprotect_prtt.h
Modules/RecoveryHandler/: Makefile  Makefile.am  RecoveryHandler.c  RecoveryHandler.h  RecoveryHandler.vcproj  RecoveryHandler.vcxproj  RecoveryHandler.vcxproj.filters  RecoveryLog.h  activate_rcvy.c  activate_rcvy.h  asz_rcvy.c  asz_rcvy.h  backup_rcvy.c  backup_rcvy.h  capability_rcvy.c  capability_rcvy.h  export.def  install_update_rcvy.c  install_update_rcvy.h  parser_rcvy.c  parser_rcvy.h  public_rcvy.c  public_rcvy.h  restore_rcvy.c  restore_rcvy.h  status_rcvy.c  status_rcvy.h
Modules/RemoteKVMHandler/: Makefile  Makefile.am  Parser.c  Parser.h  RemoteKVMHandler.c  RemoteKVMHandler.h  RemoteKVMHandler.vcproj  RemoteKVMHandler.vcxproj  RemoteKVMHandler.vcxproj.filters  RemoteKVMLog.h  export.def  kvmconfig.c  kvmconfig.h
Modules/SUSIControlHandler/: Makefile  Makefile.am  Parser.c  Parser.h  SUSIControlHandler.cpp  SUSIControlHandler.h  SUSIControlHandler.vcproj  SUSIControlHandler.vcxproj  SUSIControlHandler.vcxproj.filters  SUSIControlLog.h  export.def
Modules/ServerRedundancyHandler/: Makefile  Makefile.am  Parser.c  Parser.h  ServerRedundancyHandler.c  ServerRedundancyHandler.h  ServerRedundancyHandler.vcproj  ServerRedundancyLog.h  export.def
Modules/SoftwareMonitorHandler/: Makefile  Makefile.am  Parser.c  Parser.h  SUSIAgentWatch.h  SoftwareMonitorHandler.c  SoftwareMonitorHandler.h  SoftwareMonitorHandler.vcproj  SoftwareMonitorHandler.vcxproj  SoftwareMonitorHandler.vcxproj.filters  SoftwareMonitorLog.h  export.def  software_config.c  software_config.h
Modules/TerminalHandler/: Makefile  Makefile.am  Parser.c  Parser.h  TerminalHandler.c  TerminalHandler.h  TerminalHandler.vcproj  TerminalHandler.vcxproj  TerminalHandler.vcxproj.filters  TerminalLog.h  export.def
Modules/TerminalHandler/WebShellClient/: SSHClient.c  SSHClient.h  check.c  config.h  hashmap.c  launcher.c  service.c  session.c
Platform/: basequeue.c  basequeue.h
Platform/Linux/: common.c  (+21 more)
(+271 files in other folders)
