SUBDIRS = Library/Log \
	  Library/cJSON \
	  Library/DES \
	  Library/Base64 \
	  Library/MQTTHelper \
	  Library/SAClient \
	  Library/SAConfig \
	  Library/SUSIHelper \
	  Library/AdvCareHelper \
	  Library/FtpHelper \
	  Library/MD5 \
	  Library/SQLite \
	  Library/SQFlashHelper \
	  Library3rdParty/Smart/smartcheck \
	  Library/SAGatherInfo \
	  Library/SAManager \
	  Library/SAHandlerLoader \
	  Library/SAGeneralHandler \
	  Application/AgentEncrypt \
	  Application/ScreenshotHelperL \
	  Application/CAgent \
	  Application/PlatformCheck \
	  Modules/TerminalHandler \
	  Modules/ScreenshotHandler \
	  Modules/RemoteKVMHandler \
	  Modules/SoftwareMonitorHandler \
	  Modules/ProcessMonitorHandler \
	  Modules/PowerOnOffHandler \
	  Modules/ProtectHandler \
	  Modules/RecoveryHandler \
	  Modules/HDDHandler \
	  Modules/MonitoringHandler \
	  Modules/NetMonitorHandler \
	  Modules/SUSIControlHandler \
	  Application/WatchdogL \
	  Library/MessageGenerator \
	  Sample/HandlerSample \
	  Sample/SampleAgent
	  
ACLOCAL_AMFLAGS = -I m4
